tests/dataset/tpc-ds/compiler/c/q3.error
/tmp/TestCCompiler_TPCDS_Goldenq32720698186/001/prog.c: In function ‘test_TPCDS_Q3_result’:
/tmp/TestCCompiler_TPCDS_Goldenq32720698186/001/prog.c:230:7: error: incompatible types when initializing type ‘int’ using type ‘tmp_item_t’
  230 |       (tmp_item_t){
      |       ^
/tmp/TestCCompiler_TPCDS_Goldenq32720698186/001/prog.c:234:46: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  234 |   if (test_TPCDS_Q3_result_result.len != tmp1.len) {
      |                                              ^
      |                                              ->
/tmp/TestCCompiler_TPCDS_Goldenq32720698186/001/prog.c:238:55: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  238 |       if (test_TPCDS_Q3_result_result.data[i3] != tmp1.data[i3]) {
      |                                                       ^
      |                                                       ->
/tmp/TestCCompiler_TPCDS_Goldenq32720698186/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq32720698186/001/prog.c:294:33: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  294 |   test_TPCDS_Q3_result_result = result;
      |                                 ^~~~~~
